# weather-app

./: README.md  pyproject.toml
config/: settings.py  urls.py
weatherApp/: urls.py  views.py
weatherApp/templates/: input_form.html  weather_template.html
